Ensure signaling works, clean up CLI errors

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "keccak": "^2.0.0",
     "openzeppelin-solidity": "^2.1.2",
     "rlp": "^2.2.2",
+    "truffle-hdwallet-provider": "^1.0.8",
     "web3": "^1.0.0-beta.37"
   }
 }
